gitops/argocd/applications/kubeden-client/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeden-client-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: client.kubeden.io
spec:
  tls:
  - hosts:
    - client.kubeden.io
    secretName: kubeden-client-tls
  rules:
  - host: client.kubeden.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubeden-client-service
            port: 
              number: 80
